public/responsive/768px_or_wider.css
.grid .tile {
  width:47.5%;
  margin-left:1.5%;
  margin-right:0.5%;
}

body {
  background: url('/images/textures/stone.png');
}

div#header-wrapper, div.content {
  background: url('/images/textures/wheat.png');
  color:rgb(50,50,50);
}


/* Services  */
.services div.services-content {
  width: 100%;
  max-width: 1024px;
  margin: 0 auto;
}


.services #header-wrapper .header a.logo div {
  height: 70px;
  background-image: url('/images/logo/with-shadow.png');
  background-position: 1.6% center;
  background-repeat: no-repeat;
}

section.services article.tile {
  margin: 53px 0 59px 0;
}

section.services {
}

section.main article.introduction p {
  margin: 0;
  font-size: 16px;
}

section.main article.introduction {
  padding-top: 40px;
  margin-bottom: 11px;
}

section.services article.tile p {
  font-size: 16px;
  margin: 0;
}

/* Home     */
#header-wrapper .header a.logo div {
  height: 68px;
  background-image: url('/images/logo/with-cloud.png');
  background-position: 1.6% center;
  background-repeat: no-repeat;
}

nav.cloud {
  float: right;
  padding: 22.5px 0;
  letter-spacing: 1px;
}

nav.cloud li {
  float:left;
  padding: 0 6.5px;
  margin: 0;
}

.bottom .tile {
  width: 100%;
  margin: 0;
}

@media screen and (min-width: 1000px) {
  .bottom .tile {
    margin: 0;
    padding: 18px 0;
  }
  
  .bottom article.tile li {
    display: inline;    
  }  
}

@media screen and (max-width: 900px) {
}

.header, .main, footer section{
  max-width: 1024px;
  min-height: 72px;
}

div.content {
  padding-bottom: 46px;
}

footer {
  margin: 0;
}

/* turn off logo on wide as we use brand-cloud-logo */

.underline {
  left: -25px;
  top:2px;
}

.bottom-logo {
  height:72px;
  width: 31.25%;
  float: left;
  background-image: url('/images/services/services_footer_logo.png');
  background-position: 16% center;
}

.services .bottom-logo {
  background-position: 65%;
}

/* .branding */
.brand-cloud-logo {
  background-image:url('/images/home/clouds.png');
  background-repeat: repeat-x;
  background-position: 50% 90%;
  height: 497px;
  position: absolute;
  top: 67px;
  width: inherit;
}

.brand-solid-texture {
  background:url('/images/branding/texture.png') repeat center center transparent;
  height:497px;
  position:absolute;
  position:absolute;
  top:67px;
  width:inherit;
}

.branding .cutout {
  background: url("/images/branding/texture.png") repeat scroll left top transparent;
  height: 70px;
  left: 61px;
  position: absolute;
  top: 0;
  width: 226px;
  z-index: 50;
}

.mobiles {
  background-position: center center;
  background-image:url('/images/branding/mobiles-full.png');
  background-repeat:no-repeat;
  background-size: contain;
  height: 388px;
  width: 99%;
}

/* home */
.home .strategy .tile {
  margin: 2.5% 0.8% 3.5% 1.5%;
  width: 30.5%; /* 3 tiles in grid */
}

.home .about .tile {
  margin-top: 24px;
}

.home .about .last {
  width: 31%; /* 1 tile of strategy */
  margin-bottom: 2em;
  margin-right: 1%;
  padding-left: 6.5%;
}
.home .about .first {
  width:57%; /* 2 tiles of strategy */
  margin-bottom:2em;
  margin-right:1%;
}

.home .community .leader {
  float:left;
  margin-right: 18px;
  margin-top: 12px;
}

.strategy p {
  margin-top: 3px;
  font-size: 16px;
}

.community p {
  margin-top: 2%;
  font-size: 16px;  
}

.community article.tile {
  width: 47%;
  padding-top: 13px;
}

.community article.tile[position="right"] {
  margin-left: 2%;
}

